--- a/AllFiles/Mod03/DemoFiles/JavaScriptClient/Starter/wwwroot/index.html
+++ b/AllFiles/Mod03/DemoFiles/JavaScriptClient/Starter/wwwroot/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <title>To-do CRUD</title>
-    
+
 </head>
+
 <body>
     <h1>Destination</h1>
-  
+
+    <button onclick="getData()">Get All Destinations</button>
 
     <ul id="destinations">
     </ul>
 
     <script src="client.js"></script>
 </body>
+
 </html>
